core/components/com_members/site/assets/css/members.css
/* ... */
	#member-stats-graph:hover:after {
		color: #FFF;
	}

/* Page header */
	#page_header {
		display: block;
		padding: 25px 20px 5px 20px;
		margin-bottom: 5px;
		overflow: hidden;
		position:relative;
	}
	#page_options + #page_header {
		margin-right: 11em;
	}
	#page_header h2 {
		float: left;
		color: #444;
		margin: 0px;
		border-bottom: 0px;
		line-height: 1em;
		padding: 0 0 0 35px;
	}
	#page_header h2 a {
		border-bottom: 1px solid #f8f8f8;
		color: #444;
	}
	#page_header h2 a:hover {
		border-bottom: 1px solid #aaa;
	}
	#page_header span {
		float: left;
		color: #777;
		border: none;
		padding: 3px 15px 0 15px;
	}
	#page_header h3 {
		float: left;
		margin: 0;
		padding: 3px 0 0 0;
		color: #999;
		font-size: 16px;
		font-weight: 400;
	}

	#page_header #profile-privacy {
		color: transparent;
		position: absolute;
		top: 25px;
		left: 20px;
		width: 30px;
		height: 30px;
		line-height: 1;
		border: none;
		display:block;
		padding:0;
		background-image: none;
		overflow: hidden;
	}
	#page_header #profile-privacy:before {
		content: "\f0eb";
		font-size: 30px;
		color: #ccc;
		font-family: 'Fontcons';
		background-image: none;
	}
	#page_header #profile-privacy.private:before {
		content: "\f023";
		color: #353535;
	}

/* Page options */
	#page_options { 
		list-style: none;
		position: absolute;
		top: 20px;
		right: 20px;
		margin: 0;
		padding: 0;
	}
	#page_options li {
		margin: 0;
		padding: 0;
	}

	#page_notifications {
		margin: 0 20px;
	}

	#page_content {
		margin: 15px 20px;
	}
	#page_content h3.section-header {
		display: none;
	}

/* Member Messages */
	#sbox-content .hub-mail {
		background: url("/core/plugins/members/messages/assets/img/mail_bg.png") repeat 0 0;
		padding: 10px;
		width: auto;
		min-height: 380px;
	}
	#sbox-content .hub-mail .cont {
		background: #FFF url('/core/plugins/groups/messages/assets/img/mail-send.png') no-repeat 98% 4%;
		border: 1px solid #efefef;
	}
	#sbox-content .hub-mail .cont label {
		padding: 0.5em 0;
		margin: 0 10px;
		border-bottom: none;
		color: #777;
		display: block;
	}
	#sbox-content .hub-mail .cont h3 {
		background: none;
		border: none;
		text-shadow: none;
		padding: 0.5em 0;
		margin: 5px 10px 0 10px;
		filter: none;
	}
	#sbox-content .hub-mail .cont #msg-to {
		width: 350px;
		display: block;
	}
	#sbox-content .hub-mail .cont input[type=submit] {
		width: auto;
	}
	#sbox-content .hub-mail .cont .hint {
		font-size: 0.85em;
		color: #999;
		display: block;
	}
	#sbox-content .hub-mail .cont .required {
		color: #f00;
		font-size: 0.6em;
		text-transform: uppercase;
	}
	#sbox-content .hub-mail #members {
		display: block;
		width: 50%;
	}
	#sbox-content .hub-mail .width-65{
		width: 65%;
	}
	#sbox-content .hub-mail .smallinput {
		width: 1px;
	}
	#page_sidebar .message-member a {
		margin: 0;
		padding: 0;
		display: block;
		width: 1em;
		height: 1em;
		font-size: 1.2em;
		overflow: hidden;
		border: none;
	}
	#page_sidebar .message-member a:before { 
		content: "\2709";
		font-family: "Fontcons";
		margin-right: 1em;
	}
	#page_sidebar .message-member a:hover {
		border: none;
	}
	select.option {
		padding: 5px;
	}

/* Entries */
	.members-container,
	.members-container .results {
		background: transparent;
		border: none;
		padding: 1em 0 0 0;
	}
	.results * {
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
	}
	.results:before,
	.results:after {
		content: "";
		display: table;
		line-height: 0;
	}
	.results:after {
		clear: left;
	}
	.result-img {
		display: block;
		overflow: hidden;
		border: none;
		position: relative;
		background: #f1f1f1;
		text-align: center;
		width: 50px;
		height: 50px;
		margin: 1.5em auto 0 auto;
		-webkit-border-radius: 50%;
		-moz-border-radius: 50%;
		border-radius: 50%;
	}
	.result-img:hover {
		border: none;
	}
	.result-img img {
		width: 100%;
		max-width: 100%;
	}
	.result-details {
		opacity: 0.7;
		display: block;
		font-size: 85%;
	}
	.result-snippet {
		margin: 0 0 auto 0;
	}
	.result-url a {
		display: block;
	}
	.result-options {
		background-color: rgba(0, 0, 0, 0.02);
		padding: 1em;
		color: #aaa;
		text-align: center;
		font-size: 85%;
	}

	/* Tiles */
	.tiled {
		display: flex;
		flex-wrap: wrap;
	}
	.tiled .result {
		display: flex;
		width: 100%;
	}
	.tiled .result-body {
		border: 1px solid rgba(0, 0, 0, 0.1);
		margin-bottom: 2em;
		background: #fff;
		-webkit-transition: all .1s ease-out;
		-moz-transition: all .1s ease-out;
		-o-transition: all .1s ease-out;
		transition: all .1s ease-out;
		text-align: center;
		position: relative;
		display: flex;
		flex-direction: column;
		width: 100%;
	}
	.tiled .result-body:hover {
		border: 1px solid rgba(0, 0, 0, 0.3);
		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
	}
	.tiled .result-title {
		padding: 1.5em;
		flex: 1 0 auto;
	}
	.tiled .result-snippet {
		display: none;
	}
	.tiled .result-snippet:before {
		content: "";
		clear: left;
		display: table;
		line-height: 0;
	}

	.results .you {
		display: block;
		background-color: #5FBB4D;
		color: #fff;
		padding: .7em .91em;
		text-align: center;
		line-height: 1;
		font-size: 0.9em;
		position: absolute;
		top: 1em;
		left: 1em;
		-webkit-border-radius: 0.25em;
		-moz-border-radius: 0.25em;
		border-radius: 0.25em;
	}

/* Members Edit CSS */
	#member-picture {
		background-color: #F5F7F2;
	}
	#member-picture fieldset {
		margin: 1.5em 0 2em 0;
		padding: 0.5em 0;
	}

/* Password rules styling */
	.com_members ul#passrules {
		list-style: none;
		margin: 0 2em;
	}
	.com_members ul#passrules li {
		margin: 5px 0;
		padding: 2px 2px 2px 20px;
		position: relative;
	}
	.com_members ul#passrules li:before {
		left: 4px;
		top: 7px;
	}
	.com_members ul#passrules li.empty:before {
		position: absolute;
		left: 0;
		top: 0;
		content: "\2192";
	}
	.com_members ul#passrules li.error {
		font-weight: bold;
	}
	.com_members ul#passrules li.passed {
		text-decoration: line-through;
	}
/* ... */

